--- a/cs427/macros.tex
+++ b/cs427/macros.tex
@@ -18,10 +18,12 @@
 \renewcommand{\cong}{\indist}
 
 
+\newcommand{\?}{\stackrel{?}{=}}
 
+\newcommand{\A}{\mathcal{A}}
+\newcommand{\C}{\mathcal{C}}
 \newcommand{\K}{\mathcal{K}}
 \newcommand{\M}{\mathcal{M}}
-\newcommand{\C}{\mathcal{C}}
 \newcommand{\Z}{\mathbb{Z}}
 
 \newcommand{\Enc}{\text{\sf Enc}}
@@ -101,6 +103,8 @@
 \newcommand{\bit}[1]{\textcolor{bitcolor}{\texttt{\upshape #1}}}
 \newcommand{\bits}{\{\bit0,\bit1\}}
 
+\newcommand{\zerol}{\bit{0}^\lambda}
+\newcommand{\onel}{\bit{1}^\lambda}
 
 % \begin{document}
 
