--- a/cs427-crypto/macros.tex
+++ b/cs427-crypto/macros.tex
@@ -30,6 +30,7 @@
 \newcommand{\Enc}{\text{\sf Enc}}
 \newcommand{\Dec}{\text{\sf Dec}}
 \newcommand{\KeyGen}{\text{\sf KeyGen}}
+\newcommand{\Eavesdrop}{\text{\sf Eavesdrop}}
 
 % fancy script L
 \usepackage[mathscr]{euscript}
@@ -108,6 +109,7 @@
 }
 \newcommand{\hl}[1]{\highlightline{#1}}
 \newcommand{\mhl}[1]{\mathhighlight{#1}}
+\newcommand{\hlm}[1]{\mathhighlight{#1}}
 
 %% bits
 \newcommand{\bit}[1]{\textcolor{bitcolor}{\texttt{\upshape #1}}}
@@ -115,6 +117,13 @@
 
 \newcommand{\zerol}{\bit{0}^\lambda}
 \newcommand{\onel}{\bit{1}^\lambda}
+
+% minipage caption macro to put proof step description next to step
+\newcommand{\desc}[1]{
+    \begin{minipage}{0.3\textwidth}
+        #1
+    \end{minipage}
+}
 
 % \begin{document}
 
