more crypto work
Signed-off-by: Robert Detjens <github@detjens.dev>

--- a/cs427-crypto/hw13/hw13.md
+++ b/cs427-crypto/hw13/hw13.md
@@ -15,7 +15,7 @@ header-includes:
 >
 > > Hint: You have two equations (involving $N$ and $\Phi(N)$) and two unknowns ($p$ and $q$).
 >
-> Write a sage function that takes as input an RSA modulus $N$ and $\Phi(N)$ and factors $N$. Use it to factor the
+> Write a `sage` function that takes as input an RSA modulus $N$ and $\Phi(N)$ and factors $N$. Use it to factor the
 > following 2048-bit RSA modulus. Note: take care that there are no precision issues in how you solve the problem (the
 > answers should always be integers!); double-check your factorization!
 
@@ -42,19 +42,40 @@ phi = 982596486168164533679068138587450785169755353624059289415533430269
       866756049375323695112
 ```
 
-```sage
+Sage solver:
 
+```py
+def rsa_factor(n, phi):
+  p, q = var('p q')
+  solves = solve([N == p*q, phi == (p - 1)*(q - 1)], p, q)
+  return solves[0] # solve() returns two solves [p, q] and [q, p], either works
 ```
 
+Factors:
+
+```
+p = 93524195713675969769392792891804134476995933511802171872806533613894
+    12531812702891792282763505995136608679026507582290903916195465065737
+    14513994049240833526816235957699648688337327410429196529474184107065
+    91924279351175758639818474602871913428335603560184851762535428165892
+    37713501814110266911435430483265167
+
+q = 10506334523061610465734801363429770178600654212894190908310118588883
+    28139819275415784491038859906064060912154239886412322904143688606612
+    35234905516208831410002395649542617648887800946357680235133745987328
+    10651723487088893143934463946546935572265725387034703818063402820699
+    7149618094761699250765049161158010333
+```
 
 \pagebreak
 
 ## Question 2
 
-> Bob and Charlie are such good friends that their RSA public keys have the same $N$ value, although they have different $e$-values. Bob’s public key is $(N, e_1)$ and Charlie’s is
-> $(N, e_2)$. Furthermore, $gcd(e_1, e_2) = 1$.
+> Bob and Charlie are such good friends that their RSA public keys have the same $N$ value, although they have different
+> $e$-values. Bob’s public key is $(N, e_1)$ and Charlie’s is $(N, e_2)$. Furthermore, $gcd(e_1, e_2) = 1$.
 >
-> Alice encrypts the same plaintext $m$ for both Bob and Charlie, resulting in $c_1 = m^{e_1} \% N$ and $c_2 = m^{e_2} \% N$. Recover $m$ and explain how you did it.
+> Alice encrypts the same plaintext $m$ for both Bob and Charlie, resulting in $c_1 = m^{e_1} \% N$ and $c_2 = m^{e_2}
+> \% N$. Recover $m$ and explain how you did it.
 >
 > > Hint: Think about Bezout's theorem with respect to $e_1$ and $e_2$.
 
@@ -91,4 +112,26 @@ c2 = 779914122375327168446944321495539646147013727011582646915022183585
      780891938388264218719084702143431349408044167784514258854459143125
      653263844164576330828292595850976078158402567790988321423405416076
      833506075521484284358
+```
+
+\begin{minipage}{0.3\textwidth}
+  \begin{align*}
+    m &\equiv_N m^1 \\
+      &\equiv_N m^{Ae_1 + Be_2} \\
+      &\equiv_N m^{Ae_1}m^{Be_2} \\
+      &\equiv_N (m^{e_1})^A(m^{e_2})^B \\
+      &\equiv_N (c_1)^A(c_2)^B
+  \end{align*}
+\end{minipage}
+\begin{minipage}{0.5\textwidth}
+  Bezout's Theorem states that if $ax + bn = 1$, $a$ and $x$ are multiplicative inverses mod $n$. These inverses will cancel out and allow the recovery of $m$ from the two ciphertexts.
+
+  $A$ and $B$ can be efficiently found via a modified Euclid's algorithm, e.g. in Sage as $\texttt{xgcd(e1, e2)}$.
+\end{minipage}
+
+
+```py
+>>> _, A, B = xgcd(e1, e2)
+>>> c1^A * c2^B % N
+1223334444555556666667777777888888889999999990000000000
 ```
