--- a/cs427-crypto/hw14/hw14.md
+++ b/cs427-crypto/hw14/hw14.md
@@ -17,5 +17,39 @@ header-includes:
 > exponents. That is, Alice & Bob use random exponents $a, b$ in the first DHKA, then $a+1, b+1$ in the second, $a+2,
 > b+2$ in the third.
 >
-> Eve observes all of these DHKA interactions as an eavesdropper. She later learns the key derived
-> from the second DHKA instance. Describe how she can now compute the first and third DHKA keys.
+> Eve observes all of these DHKA interactions as an eavesdropper. She later learns the key derived from the second DHKA
+> instance. Describe how she can now compute the first and third DHKA keys.
+
+Diffie-Hellman allows two parties to generate a shared secret over a public connection. This is achieved via cyclic
+group exponents over a modulus space. Recovering $x$ from $g^x$ in $\G$ is the discrete logarithm problem and thus is
+NP-hard. However, due to the incremental scheme of this DHKA exchange, the
+
+Eve knows the following:
+
+|                      |                                         |
+|----------------------|-----------------------------------------|
+| $g$                  | publicly known DH generator             |
+| $g^a$, $g^b$         | public from the first DH exchange       |
+| $g^{a+1}$, $g^{b+1}$ | public from the second DH exchange      |
+| $g^{a+2}$, $g^{b+2}$ | public from the third DH exchange       |
+| $g^{(a+1)(b+1)}$     | derived key from the second DH exchange |
+
+The first and third keys can be expressed as functions of these known values, as follows:
+
+The first DH key:
+
+\begin{align*}
+  g^{ab} &= \frac{g^{(a+1)(b+1)}}{g^a * g^b * g} \\
+         &= \frac{g^{ab + a + b + 1}}{g^{a + b + 1}} \\
+         &= g^{ab}
+\end{align*}
+
+The third DH key:
+
+\begin{align*}
+  g^{(a+2)(b+2)} &= \\
+  g^{ab + 2a + 2b + 4} &= g^{(a+1)(b+1)} * g^a * g^b * g^3 \\
+                  &= g^{ab + a + b + 1} * g^a * g^b * g^3 \\
+                  &= g^{ab + a + a + b + b + 1 + 3} \\
+                  &= g^{ab + 2a + 2b + 4} \\
+\end{align*}
