--- a/cs427-crypto/macros.tex
+++ b/cs427-crypto/macros.tex
@@ -24,6 +24,7 @@
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\C}{\mathcal{C}}
 \newcommand{\D}{\mathcal{D}}
+\newcommand{\G}{\mathbb{G}}
 \newcommand{\K}{\mathcal{K}}
 \newcommand{\M}{\mathcal{M}}
 \newcommand{\T}{\mathcal{T}}
