--- a/cs427-crypto/hw15/hw15.md
+++ b/cs427-crypto/hw15/hw15.md
@@ -14,7 +14,7 @@ header-includes:
 > A) Suppose you are given an ElGamal encryption of an unknown plaintext $M \in \mathbb G$. Show how to construct a
 > different ciphertext that also decrypts to the same $M$.
 
-
+ElGamal en
 
 > B) Suppose you are given two ElGamal encryptions, of unknown plaintexts $M_1, M_2 \in \mathbb G$. Show how to
 > construct a ciphertext that decrypts to their product $M_1 * M_2$.
